@startuml Facade_Checkout
title Facade - Checkout

interface ICheckoutFacade {
  +CalcularFrete(carrinho, cep): decimal
  +CalcularPrazo(carrinho): string
  +FinalizarAsync(usuarioEmail, carrinho, request, cancellationToken): CheckoutResult
}

class CheckoutFacade {
  -context: ApplicationDbContext
  +FinalizarAsync(...)
}

class CarrinhoController
class ApiCheckoutController
class CartService
class CarrinhoItem
class Produto
class Pedido
class PedidoItem

ICheckoutFacade <|.. CheckoutFacade
CarrinhoController --> ICheckoutFacade
ApiCheckoutController --> ICheckoutFacade
CarrinhoController --> CartService
ApiCheckoutController --> CartService
CheckoutFacade --> CarrinhoItem
CheckoutFacade --> Produto
CheckoutFacade --> Pedido
CheckoutFacade --> PedidoItem

note right of CheckoutFacade
Centraliza validação de carrinho,
estoque, frete, split, pedido,
baixa de estoque e rastreio.
A finalização ocorre dentro de
transação EF Core.
end note

@enduml
